# vulkan_loader_generator

./: .clang-format  .clang-tidy  .cmake-format.py  .gitignore  CMakeLists.txt  LICENSE  README.md  vcpkg.json
cmake/: CompilerWarnings.cmake  PreventInSourceBuilds.cmake  StandardProjectSettings.cmake  vcpkg.cmake
src/: CMakeLists.txt  main.cpp  vgen.cpp  vgen.hpp
tests/: CMakeLists.txt  vgen-output.cpp  vgen-output.tests.cpp  vgen-parser.cpp  vgen-parser.tests.cpp
